--- a/app/src/main/res/layout/fragment_info_survey.xml
+++ b/app/src/main/res/layout/fragment_info_survey.xml
@@ -40,12 +40,22 @@
                     android:layout_below="@+id/info_survey_description"
                     android:elevation="@dimen/pd_xsmall">
 
-                    <android.support.v7.widget.AppCompatTextView
-                        android:id="@+id/info_survey_comment"
-                        style="@style/text.normal.black"
-                        android:layout_margin="@dimen/pd_normal"
-                        android:hint="Ваш комментарий"
-                        android:singleLine="true" />
+                    <LinearLayout style="@style/linear">
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/info_survey_comment"
+                            style="@style/text.normal.black"
+                            android:layout_margin="@dimen/pd_normal"
+                            android:hint="Ваш комментарий"
+                            android:singleLine="true" />
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/info_survey_apartament_number"
+                            style="@style/text.normal.black"
+                            android:layout_margin="@dimen/pd_normal"
+                            android:hint="@string/apartament_number"
+                            android:singleLine="true" />
+                    </LinearLayout>
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.GridLayout
