--- a/app/src/main/res/layout/fragment_house_address.xml
+++ b/app/src/main/res/layout/fragment_house_address.xml
@@ -7,30 +7,33 @@
 
         <RelativeLayout style="@style/root">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"/>
 
             <TextView
                 android:id="@android:id/empty"
                 style="@style/emptylist_without_picture"
-                android:layout_below="@+id/list"
+                android:layout_alignParentTop="true"
                 android:layout_marginTop="@dimen/pd_normal"
                 android:fontFamily="sans-serif-light"
                 android:text="@string/below_house_addresses_hint"
                 android:textColor="@color/gray_light"
                 android:textSize="@dimen/ts_normal"/>
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@android:id/empty"
+                android:background="@color/white"/>
+
             <Button
                 android:id="@+id/profileButton"
                 style="@style/button.centered"
-                android:layout_below="@android:id/empty"
+                android:layout_below="@id/list"
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="false"
                 android:layout_marginBottom="@dimen/pd_xlarge"
                 android:minWidth="250dp"
+                android:layout_marginTop="@dimen/pd_xlarge"
                 android:padding="@dimen/pd_xnormal"
                 android:text="Перейти в профиль"
                 android:textSize="@dimen/ts_normal"/>
