--- a/app/src/main/res/layout/item_house_address.xml
+++ b/app/src/main/res/layout/item_house_address.xml
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
+
     <RelativeLayout
         android:id="@+id/text_container"
-        android:padding="@dimen/pd_normal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/pd_normal">
+
         <TextView
             android:id="@+id/title"
-            style="@style/text.small.gray"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Тайтл пункта"/>
-        <TextView
-            android:id="@+id/value"
-            android:layout_below="@+id/title"
             style="@style/text.normal.black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Забугорная 24, кв42"/>
+            tools:text="Забугорная 24, кв42"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/ic_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_check_green"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
+
     <View
-        android:layout_below="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="0.2dp"
-        android:background="@color/gray_light" />
+        android:layout_below="@+id/text_container"
+        android:background="@color/gray_light"/>
 </RelativeLayout>
