--- a/app/src/main/res/layout/survey_variant_image.xml
+++ b/app/src/main/res/layout/survey_variant_image.xml
@@ -11,6 +11,7 @@
         android:id="@+id/image"
         android:layout_width="@dimen/vs_large"
         android:layout_height="@dimen/vs_large"
-        android:background="@drawable/border_element"
+        android:padding="2dp"
+        android:background="@drawable/green_border"
         android:scaleType="fitCenter"/>
 </LinearLayout>
