--- a/app/src/main/res/layout/fragment_house_poll.xml
+++ b/app/src/main/res/layout/fragment_house_poll.xml
@@ -40,7 +40,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_margin="30dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:backgroundTint="@color/fab_house_polls_add_color"
                 app:borderWidth="0dp"
                 app:elevation="6dp"
