--- a/app/src/main/res/layout/quest_oss_poll.xml
+++ b/app/src/main/res/layout/quest_oss_poll.xml
@@ -15,6 +15,12 @@
                 android:gravity="center"
                 android:tag="front">
 
+                <include
+                    layout="@layout/quest_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
 
                 <TextView
                     android:id="@+id/title"
@@ -22,6 +28,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/rrPrice"
                     android:layout_gravity="center_vertical"
                     android:drawableLeft="@drawable/icons_white"
                     android:drawablePadding="@dimen/pd_xxsmall" />
