--- a/app/src/main/res/layout/fragment_quests.xml
+++ b/app/src/main/res/layout/fragment_quests.xml
@@ -2,16 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/root">
 
-
-    <!--<ru.mos.polls.mainbanner.MainBannerView-->
-    <!--android:id="@+id/banner_layout"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content" />-->
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/ptrLayout"
-        style="@style/root"
-        android:layout_marginTop="-28dp">
+        style="@style/root">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
